# home-data-collector

./: .gitignore  Dockerfile  README.md  collector_config.yml  compose.yml  docker-bake.json
.dev/: compose.yml
.github/workflows/: build-push-docker-image.yml
backend/: Cargo.toml
backend/src/: config.rs  main.rs  sdb.rs
backend/src/app/: problem_details.rs
backend/src/app/interface/: controller.rs  route.rs
backend/src/app/signal_data/: controller.rs  error.rs  route.rs
backend/src/app/weather_connector/: controller.rs  error.rs  route.rs
services/collector/: Cargo.toml
services/collector/src/: collector.rs  main.rs
shared/: Cargo.toml
shared/src/models/: interface.rs  shelly_v1_adapter.rs  shelly_v2_adapter.rs  signal_data.rs  signal_meta.rs  tasklist.rs
